# greenpipeline-ai

./: .ai-catalog-mapping.json  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  AGENTS.md  GEMINI.md  JUDGE_DEMO.md  PROJECT_PLAN.md  README.md  pyproject.toml  structure.txt
.agent/agents/architecture-agent/: GEMINI.md
.agent/agents/carbon-intelligence-agent/: GEMINI.md
.agent/agents/demo-agent/: GEMINI.md
.agent/agents/integration-agent/: GEMINI.md
.agent/agents/optimization-agent/: GEMINI.md
.agent/agents/pipeline-analysis-agent/: GEMINI.md
.agent/skills/aiopslab-integration/: SKILL.md
.agent/skills/carbon-estimator/: SKILL.md
.agent/skills/dagger-pipeline-runner/: SKILL.md
.agent/skills/hackathon-demo-builder/: SKILL.md
.agent/skills/pipeline-optimizer/: SKILL.md
.agent/skills/pipeline-parser/: SKILL.md
.agent/skills/pipeline-visualizer/: SKILL.md
.gitlab/duo/: agent-config.yml
.gitlab/duo/flows/: greenpipeline.yml
agents/: agent.yml  greenpipeline_agent.yml
flows/: flow.yml  greenpipeline_flow.yml
greenpipeline/: __init__.py  _paths.py  carbon.py  dashboard.py  examples_magic_feature.py  gitlab_comment.py  optimizer.py  parser.py  patch_generator.py  pipeline_runner.py  requirements.txt  visualizer.py
greenpipeline/agents/: reasoning_agent.py
greenpipeline/samples/: OPTIMIZATION_REPORT.md  README.md  gitlab_optimized.yml  gitlab_real.yml  sample_pipeline.yml
greenpipeline/tests/: test_carbon.py  test_optimizer.py  test_parser.py  test_runner.py
tests/: test_carbon.py  test_optimizer.py  test_parser.py  test_runner.py
